--- a/pc2nicolascruz/src/components/front/Header/Header.css
+++ b/pc2nicolascruz/src/components/front/Header/Header.css
@@ -38,3 +38,16 @@
 .header-links ul li a:hover {
   color: #fffc3c;
 }
+
+.cart {
+  padding-right: 20px;
+  margin-right: 30px;
+}
+
+.cart-length {
+  margin: 3px;
+  font-size: 14px;
+  font-weight: 700;
+  vertical-align: super;
+  color: #fdd101;
+}
